Chapter21/aks_agic/shopping-portal.yaml
# aks-agic/shopping-portal.yaml

---
# shopping Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
  namespace: agic-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
        - name: shopping
          image: quay.io/iamgini/k8sbible-portal:1.1
          ports:
            - containerPort: 5000

---
# shopping service
apiVersion: v1
kind: Service
metadata:
  name: shopping-service
  namespace: agic-demo
spec:
  type: ClusterIP
  selector:
    app: shopping
  ports:
    - port: 8080      # Port exposed within the cluster
      targetPort: 5000  # Port on the pods
      protocol: TCP   # Protocol
