Chapter21/aks_agic/video-portal.yaml
# aks-agic/video-portal.yaml
---
# video Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video
  namespace: agic-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video
  template:
    metadata:
      labels:
        app: video
    spec:
      containers:
        - name: video
          image: quay.io/iamgini/k8sbible-portal:1.1
          ports:
            - containerPort: 5000

---
# video service
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: agic-demo
spec:
  type: ClusterIP
  selector:
    app: video
  ports:
    - port: 8080      # Port exposed within the cluster
      targetPort: 5000  # Port on the pods
      protocol: TCP   # Protocol
